# wxVideoProcessor

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat
.github/workflows/: wxOSX_arm64.yml
SampleGuiPlugin1/: CMakeLists.txt  SampleGuiPlugin1.cpp  SampleGuiPlugin1.def  SampleGuiPlugin1.h  SampleGuiPlugin1.pjd  SampleGuiPlugin1Exports.cpp  SampleGuiPluginWindow1.cpp  SampleGuiPluginWindow1.h
SampleGuiPlugin2/: CMakeLists.txt  SampleGuiPlugin2.cpp  SampleGuiPlugin2.def  SampleGuiPlugin2.h  SampleGuiPlugin2.pjd  SampleGuiPlugin2Exports.cpp  SampleGuiPluginWindow2.cpp  SampleGuiPluginWindow2.h
SampleNonGuiPlugin/: CMakeLists.txt  SampleNonGuiPlugin.cpp  SampleNonGuiPlugin.def  SampleNonGuiPlugin.h  SampleNonGuiPluginExports.cpp
include/: stdwx.h
wxGuiPluginBase/: CMakeLists.txt  wxGuiPluginBase.cpp
wxModularCore/: CMakeLists.txt  wxModularCore.cpp  wxModularCore.h  wxModularCoreSettings.cpp  wxModularCoreSettings.h
wxModularHost/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  SampleModularCore.cpp  SampleModularCore.h  wxModularHost.pjd  wxModularHostApp.cpp  wxModularHostApp.h
wxNonGuiPluginBase/: CMakeLists.txt  wxNonGuiPluginBase.cpp
